FIX: Fix TaskEngineV3 UI styles
1. Fix scrollbar
2. Fix scenario name input focus style

--- a/src/modules/TaskEngine/TaskEngineV3/src/scss/entityCollectingPage.scss
+++ b/src/modules/TaskEngine/TaskEngineV3/src/scss/entityCollectingPage.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     margin: 0px 20px 0px 20px;
-    padding: 10px;
+    padding: 10px 20px;
     background-color: #f8f8f8;
     border-radius: 4px;
     .row{
